# intercom

./: .gitignore  .mcp.json  README.md  SPEC.md  pyproject.toml
.claude-plugin/: plugin.json
hooks/: hooks.json  on-session-start.sh
intercom/: __init__.py  server.py
