[project]
name = "intercom-channel-plugin"
version = "0.1.0"
description = "Agent-to-agent communication channel plugin for Claude Code via tmux"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{ name = "Oded Falik" }]
keywords = ["mcp", "intercom", "claude-code", "channel-plugin", "tmux"]

dependencies = [
    "mcp>=1.26.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
]

[project.scripts]
intercom-server = "intercom.server:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["intercom"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]
